--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ addopts = "--cov=altair_upset --cov-report=term-missing"
 [tool.ruff]
 line-length = 88
 target-version = "py38"
-select = ["E", "F", "I", "UP"]
+lint.select = ["E", "F", "I", "UP"]
 
 [tool.mypy]
 python_version = "3.8"
